finally image drop

--- a/_ipynbs/git_a.ipynb
+++ b/_ipynbs/git_a.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dynamic-lottery",
+   "id": "stainless-bosnia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "humanitarian-specification",
+   "id": "official-median",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "delayed-india",
+   "id": "dress-peeing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "complimentary-tucson",
+   "execution_count": null,
+   "id": "micro-carpet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "little-israeli",
+   "id": "urban-stand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +61,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "south-brave",
+   "id": "adjacent-subscriber",
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(files)):\n",
     "    os.system(\"move \"+files[i]+r\" C:\\Users\\junha\\Documents\\GitHub\\junha-lee.github.io\\assets\\images\")\n",
     "    f = open(files[i][:-6]+'.md', 'r+', encoding='UTF8')\n",
-    "    line = f.read().replace('![png](', '![png](../assets/images/')\n",
+    "    line = f.read().replace('![png](', '![png](https://raw.githubusercontent.com/junha-lee/junha-lee.github.io/main/assets/images/')\n",
     "    f.close()\n",
     "    f2 = open(files[i][:-6]+'.md', 'w', encoding='UTF8')\n",
     "    f2.write(line)\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "earned-internet",
+   "id": "approved-bottle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "royal-athletics",
+   "id": "protected-timer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "national-counter",
+   "id": "studied-survey",
    "metadata": {},
    "outputs": [],
    "source": []
