--- a/_ipynbs/git_a.ipynb
+++ b/_ipynbs/git_a.ipynb
@@ -2,31 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "stainless-bosnia",
+   "execution_count": 9,
+   "id": "automotive-foundation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, glob"
+    "import os, glob\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "official-median",
+   "execution_count": 15,
+   "id": "antique-marina",
    "metadata": {},
    "outputs": [],
    "source": [
     "GH_USER=\"junha_lee\"\n",
     "PC_USER=\"junha\"\n",
     "POST_PATH=\"/Users/\"+ PC_USER+\"/document/github/\"+GH_USER+\".github.io/_posts\" # <username>.github.io repository 가 있는 주소로 변경\n",
-    "IMG_PATH=\"/Users/\"+ PC_USER+\"/document/github/\"+GH_USER+\".github.io/images\"  # <username>.github.io repository 가 있는 주소로 변경"
+    "IMG_PATH=\"/Users/\"+ PC_USER+\"/document/github/\"+GH_USER+\".github.io/images\"  # <username>.github.io repository 가 있는 주소로 변경\n",
+    "\n",
+    "t = datetime.datetime.today()\n",
+    "time = t.strftime('%Y-%m-%d-')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dress-peeing",
+   "id": "aquatic-deadline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "micro-carpet",
+   "execution_count": 4,
+   "id": "graduate-saturn",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "urban-stand",
+   "id": "resistant-luxembourg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,25 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "adjacent-subscriber",
+   "execution_count": 6,
+   "id": "artificial-poultry",
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(files)):\n",
     "    os.system(\"move \"+files[i]+r\" C:\\Users\\junha\\Documents\\GitHub\\junha-lee.github.io\\assets\\images\")\n",
     "    f = open(files[i][:-6]+'.md', 'r+', encoding='UTF8')\n",
-    "    line = f.read().replace('![png](', '![png](https://raw.githubusercontent.com/junha-lee/junha-lee.github.io/main/assets/images/')\n",
+    "    line = f.read().replace('![png](', '!['+files[i][:-6]+'](https://raw.githubusercontent.com/junha-lee/junha-lee.github.io/main/assets/images/')\n",
     "    f.close()\n",
     "    f2 = open(files[i][:-6]+'.md', 'w', encoding='UTF8')\n",
     "    f2.write(line)\n",
-    "    f2.close()"
+    "    f2.close()\n",
+    "    os.rename(files[i][:-6]+'.md', time.+files[i][:-6]+'.md')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "approved-bottle",
+   "execution_count": 7,
+   "id": "noted-aruba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "protected-timer",
+   "execution_count": 8,
+   "id": "scheduled-field",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,8 +105,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "attempted-communication",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = datetime.datetime.today()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "anticipated-unknown",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021-03-11-'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "studied-survey",
+   "id": "inappropriate-objective",
    "metadata": {},
    "outputs": [],
    "source": []
