--- a/_ipynbs/git_a.ipynb
+++ b/_ipynbs/git_a.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "automotive-foundation",
+   "execution_count": 17,
+   "id": "rural-sacrifice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "antique-marina",
+   "execution_count": 18,
+   "id": "funded-beads",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "aquatic-deadline",
+   "execution_count": 19,
+   "id": "attached-counter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "graduate-saturn",
+   "execution_count": 20,
+   "id": "unauthorized-mirror",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "resistant-luxembourg",
+   "execution_count": 21,
+   "id": "capable-roommate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "artificial-poultry",
+   "execution_count": 23,
+   "id": "thick-stomach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +77,13 @@
     "    f2 = open(files[i][:-6]+'.md', 'w', encoding='UTF8')\n",
     "    f2.write(line)\n",
     "    f2.close()\n",
-    "    os.rename(files[i][:-6]+'.md', time.+files[i][:-6]+'.md')"
+    "    os.rename(files[i][:-6]+'.md', time+files[i][:-6]+'.md')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "noted-aruba",
+   "execution_count": 24,
+   "id": "annoying-claim",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "scheduled-field",
+   "execution_count": 25,
+   "id": "overhead-invalid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,39 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "attempted-communication",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = datetime.datetime.today()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "anticipated-unknown",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2021-03-11-'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "time"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "inappropriate-objective",
+   "id": "green-museum",
    "metadata": {},
    "outputs": [],
    "source": []
