--- a/_ipynbs/git_a.ipynb
+++ b/_ipynbs/git_a.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "previous-powder",
+   "execution_count": 9,
+   "id": "ethical-patrol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "possible-tracker",
+   "execution_count": 10,
+   "id": "ranging-wisdom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "domestic-coral",
+   "execution_count": 11,
+   "id": "historic-antarctica",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "behind-playing",
+   "execution_count": 12,
+   "id": "waiting-pixel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "unlike-choir",
+   "execution_count": 13,
+   "id": "tired-cargo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,26 +64,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "located-clearing",
+   "execution_count": 14,
+   "id": "clear-prophet",
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(files)):\n",
-    "    os.system(\"move \"+files[i]+r\" C:\\Users\\junha\\Documents\\GitHub\\junha-lee.github.io\\assets\\images\")\n",
-    "    f = open(files[i][:-6]+'.md', 'r+', encoding='UTF8')\n",
-    "    line = f.read().replace('![png](', '!['+files[i][:-6]+'](https://raw.githubusercontent.com/junha-lee/junha-lee.github.io/main/assets/images/')\n",
-    "    f.close()\n",
-    "    f2 = open(files[i][:-6]+'.md', 'w', encoding='UTF8')\n",
-    "    f2.write(line)\n",
-    "    f2.close()\n",
-    "    os.rename(files[i][:-6]+'.md', time+files[i][:-6]+'.md')"
+    "    os.system(\"move \"+files[i]+r\" C:\\Users\\junha\\Documents\\GitHub\\junha-lee.github.io\\assets\\images\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "worth-visiting",
+   "execution_count": 15,
+   "id": "bulgarian-engagement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.listdir()\n",
+    "condition = '*.png'\n",
+    "pngfile = glob.glob(condition)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "arbitrary-ranking",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(pngfile)):\n",
+    "    os.system(\"move \"+pngfile[i]+r\" C:\\Users\\junha\\Documents\\GitHub\\junha-lee.github.io\\assets\\images\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ignored-commercial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "nuclear-peace",
+   "execution_count": 18,
+   "id": "listed-celtic",
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(mdfiles)):\n",
-    "    os.system(\"move \"+mdfiles[i]+r\" C:\\Users\\junha\\Documents\\GitHub\\junha-lee.github.io\\_posts\")"
+    "    f = open(mdfiles[i], 'r+', encoding='UTF8')\n",
+    "    line = f.read().replace('![png](', '!['+mdfiles[i][:-6]+'](https://raw.githubusercontent.com/junha-lee/junha-lee.github.io/main/assets/images/')\n",
+    "    f.close()\n",
+    "    f2 = open(mdfiles[i], 'w', encoding='UTF8')\n",
+    "    f2.write(line)\n",
+    "    f2.close()\n",
+    "    os.rename(mdfiles[i], time+mdfiles[i])\n",
+    "    os.system(\"move \"+time+mdfiles[i]+r\" C:\\Users\\junha\\Documents\\GitHub\\junha-lee.github.io\\_posts\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outstanding-difference",
+   "id": "figured-registration",
    "metadata": {},
    "outputs": [],
    "source": []
