--- a/_ipynbs/cnn.ipynb
+++ b/_ipynbs/cnn.ipynb
@@ -2,35 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "worldwide-riverside",
+   "id": "portable-benchmark",
    "metadata": {},
    "source": [
     "---\n",
-    "layout: post\n",
-    "title: CNN 개요\n",
-    "date: 2020-07-10 00:30:00\n",
+    "title: \"CNN 개요\"\n",
+    "last_modified_at: 2020-07-10 00:30:00\n",
     "category: coal\n",
     "tags:\n",
     "    - deep learning\n",
     "    - image detection\n",
     "    - coal\n",
     "    - IoT\n",
-    "mathjax: true\n",
-    "comment: true\n",
+    "toc: true\n",
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "federal-three",
+   "id": "identical-pipeline",
    "metadata": {},
    "source": [
-    "## 역사"
+    "### 역사\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "animated-affairs",
+   "id": "rural-regulation",
    "metadata": {},
    "source": [
     "* 1989년 LeCun이 발표한 논문 “Backpropagation applied to handwritten zip code recognition”에서 처음 소개, 범용화에는 미흡\n",
@@ -44,15 +43,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beautiful-prize",
+   "id": "handed-speech",
    "metadata": {},
    "source": [
-    "# 왜 CNN 인가? "
+    "### 왜 CNN 인가? \n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "abstract-window",
+   "id": "outstanding-newfoundland",
    "metadata": {},
    "source": [
     "* 기존 완전 연결 계층의 문제점\n",
@@ -70,15 +70,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medium-biodiversity",
+   "id": "bibliographic-values",
    "metadata": {},
    "source": [
-    "# CNN 특징\n"
+    "### CNN 특징\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "olive-moment",
+   "id": "indirect-service",
    "metadata": {},
    "source": [
     "- 1980년대부터 이미지 인식 분야에 사용\n",
@@ -90,15 +91,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "editorial-stranger",
+   "id": "loaded-advance",
    "metadata": {},
    "source": [
-    "# CNN 구조"
+    "### CNN 구조\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "potential-provision",
+   "id": "subject-motorcycle",
    "metadata": {},
    "source": [
     "![png](cnn.png)"
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smoking-static",
+   "id": "special-flexibility",
    "metadata": {},
    "source": [
     "* 합성곱 층 – 합성곱 연산(필터 연산)을 처리하는 계층으로 첫 은닉층은 저수준 특성에 집중하고, 다음으로 갈 수록 고수준 특성으로 조합해 나감.\n",
@@ -123,15 +125,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loving-treatment",
+   "id": "manual-brick",
    "metadata": {},
    "source": [
-    "# 하이퍼파라미터 최적화"
+    "### 하이퍼파라미터 최적화\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "spiritual-opera",
+   "id": "fewer-dress",
    "metadata": {},
    "source": [
     "* 층 수\n",
@@ -142,10 +145,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-hawaii",
+   "id": "absolute-enough",
    "metadata": {},
    "source": [
-    "###  어떤 조합이 문제 해결에 가장 좋은지 판단하는 방법\n",
+    " 어떤 조합이 문제 해결에 가장 좋은지 판단하는 방법\n",
     "\n",
     "1. 많은 조합을 시도하고 검증셋 (또는 K-폴드 교차 검증) 성능 확인\n",
     "\n",
@@ -162,24 +165,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formal-western",
+   "id": "handled-humanity",
    "metadata": {},
    "source": [
     "\n",
     "### 마치며\n",
+    "---\n",
     "\n",
     "앞으로의 연구에 쓰일 CNN에 대해 간단하게 정리 해 봤습니다.\n",
     "\n",
     "읽어주셔서 감사합니다."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fundamental-shopper",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
