--- a/_ipynbs/git_a.ipynb
+++ b/_ipynbs/git_a.ipynb
@@ -1,9 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "empirical-binding",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: python으로 github 블로그에 jupyter notebook 올리기\n",
+    "date: 2021-03-24\n",
+    "category: etc\n",
+    "toc: true\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "instrumental-brush",
+   "metadata": {},
+   "source": [
+    "### python으로 github 블로그에 jupyter notebook 올리기\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ethical-patrol",
+   "id": "dated-worker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ranging-wisdom",
+   "execution_count": null,
+   "id": "studied-intelligence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "historic-antarctica",
+   "id": "juvenile-robert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "waiting-pixel",
+   "id": "wound-publicity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "tired-cargo",
+   "id": "assisted-international",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "clear-prophet",
+   "id": "radical-spanish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bulgarian-engagement",
+   "id": "dying-johnson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "arbitrary-ranking",
+   "id": "careful-tissue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ignored-commercial",
+   "id": "enormous-vienna",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "listed-celtic",
+   "id": "spatial-export",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,14 +147,6 @@
     "    os.rename(mdfiles[i], time+mdfiles[i])\n",
     "    os.system(\"move \"+time+mdfiles[i]+r\" C:\\Users\\junha\\Documents\\GitHub\\junha-lee.github.io\\_posts\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "figured-registration",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
