--- a/_posts/2021-03-14-git_a.md
+++ b/_posts/2021-03-14-git_a.md
@@ -1,3 +1,14 @@
+---
+title: python으로 github 블로그에 jupyter notebook 올리기
+date: 2021-03-24
+category: etc
+toc: true
+---
+
+### python으로 github 블로그에 jupyter notebook 올리기
+---
+
+
 ```python
 import os, glob
 import datetime
@@ -72,25 +83,4 @@ for i in range(len(mdfiles)):
     f2.close()
     os.rename(mdfiles[i], time+mdfiles[i])
     os.system("move "+time+mdfiles[i]+r" C:\Users\junha\Documents\GitHub\junha-lee.github.io\_posts")
-```
-
-
-    ---------------------------------------------------------------------------
-
-    IndexError                                Traceback (most recent call last)
-
-    <ipython-input-56-ce0f9ad2e691> in <module>
-          1 for i in range(len(mdfiles)):
-          2     f = open(mdfiles[i], 'r+', encoding='UTF8')
-    ----> 3     line = f.read().replace('![gi](https://raw.githubusercontent.com/junha-lee/junha-lee.github.io/main/assets/images/', '!['+files[i][:-6]+'](https://raw.githubusercontent.com/junha-lee/junha-lee.github.io/main/assets/images/')
-          4     f.close()
-          5     f2 = open(mdfiles[i], 'w', encoding='UTF8')
-    
-
-    IndexError: list index out of range
-
-
-
-```python
-
 ```
