--- a/_ipynbs/YOLO(2).ipynb
+++ b/_ipynbs/YOLO(2).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "split-highlight",
+   "id": "august-harvard",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legitimate-monroe",
+   "id": "sustainable-dealer",
    "metadata": {},
    "source": [
     "이번 포스트에서는 라즈베리파이를 이용해 석탄을 탐지하기 위한 coal 데이터 전처리 과정과 YOLO를 다룹니다."
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "editorial-duncan",
+   "id": "ceramic-punishment",
    "metadata": {},
    "source": [
     "### Yolo 데이터 전처리\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "declared-directive",
+   "id": "union-cooperative",
    "metadata": {},
    "source": [
     "![png](yolo-data-preprocessing.png)\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "severe-gregory",
+   "id": "secret-fashion",
    "metadata": {},
    "source": [
     "### Darkflow 매개변수\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "communist-russian",
+   "id": "descending-acceptance",
    "metadata": {},
    "source": [
     "### YOLO 학습\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consolidated-boxing",
+   "id": "vertical-shanghai",
    "metadata": {},
    "source": [
     "### 부가 설명\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scientific-incidence",
+   "id": "chief-continuity",
    "metadata": {},
    "source": [
     "### Darkflow 에러 해결 방법\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dynamic-taiwan",
+   "id": "english-injury",
    "metadata": {},
    "source": [
     "### train result\n",
@@ -188,28 +188,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worldwide-croatia",
+   "id": "fifty-michael",
    "metadata": {},
    "source": [
     "### 마치며\n",
     "---\n",
     "trainset에 대해서는 모든 석탄을 탐지함을 알 수 있었지만, testset에 대해서는 일부만 탐지가 가능한 것으로 보아 일부 데이터에 과적합 되었다고 추측할 수 있습니다.\n",
     "\n",
-    "특히 연구에 사용한 모델 구조와 하이퍼파라미터 튜닝값을 Demo data에 사용한 결과 testset까지 모두 탐지하는 것으로 보아 Imagenet과 같은 다양한 종류의 방대한 뎅\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "secure-honolulu",
-   "metadata": {},
-   "source": [
-    "\n",
-    "* https://curt-park.github.io/2017-03-26/yolo/\n",
-    "\n",
-    "* https://mickael-k.tistory.com/27\n",
-    "\n",
-    "* https://ohjinjin.github.io/machinelearning/yolo/\n",
-    "\n"
+    "특히 연구에 사용한 모델 구조와 하이퍼파라미터 튜닝값을 Demo data에 사용한 결과 testset까지 모두 탐지하는 것으로 보아 Imagenet과 같은 다양한 종류의 방대한 데이터가 필요할 것으로 보입니다.\n"
    ]
   }
  ],
