--- a/_posts/2021-03-14-cnn.md
+++ b/_posts/2021-03-14-cnn.md
@@ -10,11 +10,14 @@ tags:
 toc: true
 ---
 
+[TOC]
+
 ### 역사
+
 ---
 
 * 1989년 LeCun이 발표한 논문 “Backpropagation applied to handwritten zip code recognition”에서 처음 소개, 범용화에는 미흡
- 
+
 * 이후 2003년 Behnke의 논문 “Hierarchical Neural Networks for Image Interpretation”을 통해 일반화
 
 * Simard의 논문 “Best Practices for Convolutional Neural Networks Applied to Visual Document Analysis”을 통해 단순화  
