대규모 업데이트

--- a/_posts/2021-03-15-YOLO(2).md
+++ b/_posts/2021-03-15-YOLO(2).md
@@ -3,6 +3,9 @@ title: YOLO(2)
 date: 2020-10-2
 category: coal
 toc: true
+author_profile: false
+sidebar:
+  nav: "docs"
 ---
 
 이번 포스트에서는 라즈베리파이를 이용해 석탄을 탐지하기 위한 coal 데이터 전처리 과정과 YOLO를 다룹니다.
