--- a/_posts/2021-03-15-git_a.md
+++ b/_posts/2021-03-15-git_a.md
@@ -3,6 +3,9 @@ title: python으로 github 블로그에 jupyter notebook 올리기
 date: 2021-03-24
 category: etc
 toc: true
+author_profile: false
+sidebar:
+  nav: "docs"
 ---
 
 
