대규모 업데이트

--- a/_posts/2022-02-21-HVAC.md
+++ b/_posts/2022-02-21-HVAC.md
@@ -1,6 +1,6 @@
 ---
 title: Imitation_Learning
-last_modified_at: 2020-10-27
+date: 2020-10-27
 category: HVAC
 tags:
     - RNN
@@ -11,12 +11,6 @@ author_profile: false
 sidebar:
   nav: "docs"
 ---
-
-
-
-여러 ML 모델 사용
-
-
 
 ## 연구 목표
 
