--- a/_posts/2021-03-14-git_a.md
+++ b/_posts/2021-03-14-git_a.md
@@ -2,6 +2,8 @@
 title: python으로 github 블로그에 jupyter notebook 올리기
 date: 2000-03-24
 category: etc
+tags:
+    - blog
 toc: true
 author_profile: false
 sidebar:
