--- a/_posts/2021-03-15-YOLO(2).md
+++ b/_posts/2021-03-15-YOLO(2).md
@@ -1,7 +1,11 @@
 ---
 title: YOLO(2)
 date: 2020-10-2
-category: coal
+category: project
+tags:
+    - image detection
+    - coal
+    - IoT
 toc: true
 author_profile: false
 sidebar:
