--- a/_posts/2022-02-21-DDPG.md
+++ b/_posts/2022-02-21-DDPG.md
@@ -1,12 +1,11 @@
 ---
 title: DDPG
 date: 2021.02.17
-category: RL
+category: project
 tags:
     - RL
     - actor-cretic
     - DDPG
-    - Project
 toc: true
 author_profile: false
 sidebar:
