--- a/_posts/2022-02-21-HVAC.md
+++ b/_posts/2022-02-21-HVAC.md
@@ -1,11 +1,10 @@
 ---
 title: Imitation_Learning
 date: 2020-10-27
-category: HVAC
+category: project
 tags:
     - RNN
     - HVAC
-    - Project
 toc: true
 author_profile: false
 sidebar:
