--- a/_posts/2022-02-21-HVAC2.md
+++ b/_posts/2022-02-21-HVAC2.md
@@ -1,11 +1,10 @@
 ---
 title: RNN
 date: 2020-11-03
-category: HVAC
+category: project
 tags:
     - RNN
     - HVAC
-    - Project
 toc: true
 author_profile: false
 sidebar:
