--- a/_posts/2022-02-21-handwrite1.md
+++ b/_posts/2022-02-21-handwrite1.md
@@ -1,10 +1,9 @@
 ---
 title: hand write
 date: 2020.11.17
-category: CRNN
+category: project
 tags:
     - CRNN
-    - Project
 toc: true
 author_profile: false
 sidebar:
