--- a/_posts/2022-02-22-AL2.md
+++ b/_posts/2022-02-22-AL2.md
@@ -1,10 +1,9 @@
 ---
 title: 완주하지 못한 선수
 date: 2022-02-22
-category: algorism
+category: study
 tags:
-    - study
-    - DA
+
     - algorism
 toc: true
 author_profile: false
