--- a/_posts/2022-02-22-LA1.md
+++ b/_posts/2022-02-22-LA1.md
@@ -1,9 +1,8 @@
 ---
 title: 선형대수 스터디 시작
 date: 2022-02-22
-category: Linear Algebra
+category: study
 tags:
-    - study
     - DA
     - Linear Algebra
 toc: true
