--- a/_posts/2022-02-22-AL1.md
+++ b/_posts/2022-02-22-AL1.md
@@ -1,10 +1,8 @@
 ---
 title: 알고리즘 스터디 시작
 date: 2022-02-22
-category: algorism
+category: study
 tags:
-    - study
-    - DA
     - algorism
 toc: true
 author_profile: false
