--- a/_posts/2022-02-23-DB.md
+++ b/_posts/2022-02-23-DB.md
@@ -1,9 +1,9 @@
 ---
-title: Transformer 
-date: 2020-10-27
-category: Paper-Review
+title: DB(1)
+date: 2018-10-27
+category: lecture-review
 tags:
-    - Transformer
+    - DB
 toc: true
 author_profile: false
 sidebar:
