--- a/_posts/2022-03-12-AL5.md
+++ b/_posts/2022-03-12-AL5.md
@@ -95,12 +95,11 @@ sidebar:
    테스트 9 〉	실패 (0.02ms, 10.2MB)
    테스트 10 〉실패 (0.04ms, 10.2MB)
    테스트 11 〉통과 (0.01ms, 10.1MB)
-   
    ```
-
+   
    * 오류 원인 : 바로 앞의 기능과만 비교한다.
    * 해결 : 이전원소(temp)가 현재 원소보다 작을 경우에만 갱신한다.
-
+   
    ```python
    from collections import deque
    from math import ceil
@@ -123,11 +122,11 @@ sidebar:
        answer.append(re)
        return answer
    ```
-
-   실행 결과
-
-   ```powershell
    
+   실행 결과
+   
+   ```powershell
+   정확성  테스트
    테스트 1 〉	통과 (0.01ms, 10.2MB)
    테스트 2 〉	통과 (0.03ms, 10.2MB)
    테스트 3 〉	통과 (0.02ms, 10.3MB)
@@ -140,5 +139,4 @@ sidebar:
    테스트 10 〉통과 (0.02ms, 10.2MB)
    테스트 11 〉통과 (0.01ms, 10.2MB)
    ```
-
 
