--- a/_posts/algorithm/2022-04-10-AL14.md
+++ b/_posts/algorithm/2022-04-10-AL14.md
@@ -77,11 +77,11 @@ sidebar:
    테스트 7 〉	통과 (0.07ms, 10.4MB)
    테스트 8 〉	통과 (0.04ms, 10.4MB)
    테스트 9 〉	통과 (0.04ms, 10.3MB)
-   테스트 10 〉	실패 (0.04ms, 10.4MB)
+   테스트 10 〉	실패 (런타임 에러)
    테스트 11 〉	실패 (0.06ms, 10.3MB)
    테스트 12 〉	통과 (0.02ms, 10.3MB)
-   테스트 13 〉	실패 (0.03ms, 10.4MB)
-   테스트 14 〉	실패 (0.03ms, 10.3MB)
+   테스트 13 〉	실패 (런타임 에러)
+   테스트 14 〉	실패 (런타임 에러)
    테스트 15 〉	통과 (0.03ms, 10.4MB)
    ```
 
