--- a/_posts/algorithm/2022-04-10-AL14.md
+++ b/_posts/algorithm/2022-04-10-AL14.md
@@ -77,22 +77,23 @@ sidebar:
    테스트 7 〉	통과 (0.07ms, 10.4MB)
    테스트 8 〉	통과 (0.04ms, 10.4MB)
    테스트 9 〉	통과 (0.04ms, 10.3MB)
-   테스트 10 〉	실패 (런타임 에러)
+   테스트 10 〉	실패 (0.04ms, 10.4MB)
    테스트 11 〉	실패 (0.06ms, 10.3MB)
    테스트 12 〉	통과 (0.02ms, 10.3MB)
-   테스트 13 〉	실패 (런타임 에러)
-   테스트 14 〉	실패 (런타임 에러)
+   테스트 13 〉	실패 (0.03ms, 10.4MB)
+   테스트 14 〉	실패 (0.03ms, 10.3MB)
    테스트 15 〉	통과 (0.03ms, 10.4MB)
    ```
 
 
-   2. 수정
+      2. 수정
 
 - 런타임 에러를 해결하기 위해 반복문 없는 정렬 필요
 - 일단, 모든 숫자를 문자열로 바꾼 후
 - (문자열 * 4) [0:4]를 통해 모든 수를 4자리로 맞춘 후 정렬
 - 반환 가능한 숫자인지 알기위해 int로 변환 후 다시 str로 변환하여 반환
-- # 11번 테스트케이스의 경우 numbers의 모든 원소가 0으로, 0을 반환한다고합니다.
+
+  `11번 테스트케이스의 경우 numbers의 모든 원소가 0으로, 0을 반환한다고합니다.`
 
 ```python
 def solution(numbers):
