--- a/_posts/paper/2022-08-11-ne1.md
+++ b/_posts/paper/2022-08-11-ne1.md
@@ -1,8 +1,9 @@
-    title: Object Detection
+    title: A Survey of Modern Deep Learning based Object Detection Models
     date: 2022.08.11
     category: paper
     tags:
-    	- Object Detection
+    	- deep learning
+        - image detection
     	- paper
     toc: true
     author_profile: false
@@ -18,27 +19,29 @@
 
 ![Screen Shot 2022-08-08 at 12.54.17 PM.png](A%20Survey%20of%20Modern%20Deep%20Learning%20based%20Object%20Dete%20ce03c02f289d4a379f2e6ead6ab0fbbb/Screen_Shot_2022-08-08_at_12.54.17_PM.png)
 
-이 논문은 총 9개의 section으로 구성되어 있으며, 각 section의 내용은 위와 같습니다.
+이 논문은 총 9개의 section으로 구성되어 있으며, 각 section의 내용은 위의 표를 따름
 
 II. BACKGROUND
 
 A. Problem Statement
 
-classification이 단순히 물체를 인지하는 것을 목표로 했다면, detection은 미리 정의된 클래스의 모든 instance를 감지하고 정렬된 상자에 의해 이미지에 대략적인 위치를 제공하는 것을 목표로합니다.
+classification이 단순히 물체를 인지하는 것을 목표로 했다면, detection은 미리 정의된 클래스의 모든 instance를 감지하고 정렬된 상자에 의해 이미지에 대략적인 위치를 제공하는 것을 목표로 함
 
 B. Key challenges in Object Detection
 
 1. Intra class variation 
 
-    조명, 자세, 시점 등 제약 없는 외부환경과 회전, 흐릿함, 주변환경 등으로 인해 구분이 어려운 경우에 대한 object detection 필요.
+    조명, 자세, 시점 등 제약 없는 외부환경과 회전, 흐릿함, 주변환경 등으로 인해 구분이 어려운 경우에 대한 object detection 필요
 
 2. Number of categories 
 
-    분류할 수 있는 객체 클래스가 너무 많은 경우 구분이 어려울 수 있고, 더 높은 품질의 lable이 필요.  이에 적은 sample을 잘 사용하는 방법에 대한 연구과제도 존재함.
+    분류할 수 있는 객체 클래스가 너무 많은 경우 구분이 어려울 수 있고, 더 높은 품질의 lable이 필요
+
+    이에 적은 sample을 잘 사용하는 방법에 대한 연구과제도 존재함
 
 3. Efficiency 
 
-    많은 계산 리소스가 필요하지만, edge device의 보편화로, 더 효율적인 방법을 object detection 필요.
+    많은 계산 리소스가 필요하지만, edge device의 보편화로, 더 효율적인 방법을 object detection 필요
 
 
 III. DATASETS ANDEVALUATIONMETRICS
